--- a/src/HotelBooking.Application/HotelBooking.Application.csproj
+++ b/src/HotelBooking.Application/HotelBooking.Application.csproj
@@ -21,4 +21,9 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Contracts\" />
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
